# XPlane_custom_Plgin

./: .gitignore  CMakeLists.txt  LICENSE  MotionData.cpp  README.md  build_MotionData.sh  main.cpp
Plugins with Bash Build/: build_helloworld.sh  main.cpp
Qt_Plugin/: CMakeLists.txt  build_qt_Xplane_test.sh  get_files_from_qt.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_Xplane_test.cpp
